# clayer-cmake-gtest

./: .dev  .gitignore  CMakeLists.txt  CMakeLists.txt.in
cmake/: shared-lib.cmake
sysport/: CMakeLists.txt  sysport.c  sysport.h
sysport/test/: sysport_test.cc
